# sbm

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  install.rs  main.rs
