[package]
name = "sbm"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "^0.12", features = ["blocking"]}
serde_json = "1.0"
indicatif = "0.17"
clap = { version = "4.5.34", features = ["derive"] }
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
zip = "2.5.0"
serde_yaml = "0.9.34"
dirs = "6.0.0"

